[templates/layout] add gin ui URL template
Closes #115

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -14,7 +14,7 @@
         <nav class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand-gnode" href="#"></a>
+                    <a class="navbar-brand-gnode" href="{{ template "ginui" . }}"></a>
                 </div>
             </div>
         </nav>
