[templates/layout] add generic page title
Closes #118.

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="//projects.g-node.org/assets/gnode-bootstrap-theme/1.0.0-snapshot/css/bootstrap.min.css">
     <link rel="shortcut icon" type="image/png" href="//projects.g-node.org/assets/gnode-bootstrap-theme/1.0.0-snapshot/img/favicon.png">
+    <title>G-Node GIN</title>
 </head>
 <body>
     <div>
