[templates/layout] update bootstrap version

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -6,8 +6,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="//projects.g-node.org/assets/gnode-bootstrap-theme/1.0.0-snapshot/css/bootstrap.min.css">
-    <link rel="shortcut icon" type="image/png" href="//projects.g-node.org/assets/gnode-bootstrap-theme/1.0.0-snapshot/img/favicon.png">
+    <link rel="stylesheet"
+          href="//projects.g-node.org/assets/gnode-bootstrap-theme/1.1.0-snapshot/css/bootstrap.min.css">
+    <link rel="shortcut icon" type="image/png"
+          href="//projects.g-node.org/assets/gnode-bootstrap-theme/1.1.0-snapshot/img/favicon.png">
+
     <title>G-Node GIN</title>
 </head>
 <body>
@@ -26,7 +29,7 @@
     </div>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//projects.g-node.org/assets/gnode-bootstrap-theme/1.0.0-snapshot/js/bootstrap.min.js"></script>
+    <script src="//projects.g-node.org/assets/gnode-bootstrap-theme/1.1.0-snapshot/js/bootstrap.min.js"></script>
 </body>
 </html>
 {{ end }}
