[templates/layout] use new gin style navbar

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -15,10 +15,10 @@
 </head>
 <body>
     <div>
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand-gnode" href="{{ template "ginui" . }}"></a>
+                    <a class="navbar-brand-gin" href="{{ template "ginui" . }}"></a>
                 </div>
             </div>
         </nav>
