[templates/layout] add gin style footer
Closes #124

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -28,6 +28,29 @@
         </div>
     </div>
 
+    <nav class="navbar navbar-fixed-bottom navbar-default">
+        <div class="container">
+            <div class="row display-table">
+                <div class="col-sm-1 display-cell">
+                    <a class="navbar-footer-brand-gin" href="http://www.g-node.org"></a>
+                </div>
+                <div class="col-sm-6 display-cell">
+                    <ul class="list-inline">
+                        <li>© G-Node</li>
+                        <li><a href="http://www.g-node.org/gin_terms">Terms of usage</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-6 display-cell">
+                    <ul class="list-inline pull-right">
+                        <li><a href="https://gin.g-node.org/info/about">About</a></li>
+                        <li><a href="https://gin.g-node.org/info/imprint">Imprint</a></li>
+                        <li><a href="https://gin.g-node.org/info/contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="//projects.g-node.org/assets/gnode-bootstrap-theme/1.1.0-snapshot/js/bootstrap.min.js"></script>
 </body>
