[registration] change institute to institution
Closes #125.

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -78,7 +78,7 @@
     <h4>Affiliation</h4>
     <hr>
     <div class="form-group {{ if .FieldErrors.institute }}has-error{{ end }}">
-        <label for="reg-institute" class="col-sm-3 control-label">Institute *</label>
+        <label for="reg-institute" class="col-sm-3 control-label">Institution *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-institute" name="institute" placeholder="Institute" value="{{ .Institute }}" maxlength="512">
             {{ if .FieldErrors.institute }}
