--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -163,11 +163,21 @@
         </div>
     </div>
 
+    <hr>
+    <div class="form-group">
+        <div class="col-sm-9 col-sm-offset-3">
+            <p>By clicking "Create account", you agree to our
+                <a href="http://www.g-node.org/gin_terms">Terms of usage</a>.
+            </p>
+        </div>
+    </div>
+
     <div class="form-group">
         <div class="col-sm-9 col-sm-offset-3">
             <button type="submit" class="btn btn-default">Create account</button>
         </div>
     </div>
+    <br /><br />
 </form>
 
 <script>
