[templates] Terms of usage -> Use

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -37,7 +37,7 @@
                 <div class="col-sm-6 display-cell">
                     <ul class="list-inline">
                         <li>© G-Node</li>
-                        <li><a href="http://www.g-node.org/gin_terms">Terms of usage</a></li>
+                        <li><a href="http://www.g-node.org/gin_terms">Terms of Use</a></li>
                     </ul>
                 </div>
                 <div class="col-sm-6 display-cell">
