--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -167,7 +167,7 @@
     <div class="form-group">
         <div class="col-sm-9 col-sm-offset-3">
             <p>By clicking "Create account", you agree to our
-                <a href="http://www.g-node.org/gin_terms">Terms of usage</a>.
+                <a href="http://www.g-node.org/gin_terms">Terms of Use</a>.
             </p>
         </div>
     </div>
