[templates/registration] fix captcha typo

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -144,7 +144,7 @@
 
     <hr>
     <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-9">Please verify you are a person:</div>
+        <div class="col-sm-offset-3 col-sm-9">Please verify that you are a person:</div>
         <div class="col-sm-offset-3 col-sm-3">
             <img id="reg-image" src="/captcha/{{ .CaptchaId }}.png" alt="Captcha image">
         </div>
