[templates] make footer links dynamic

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -42,9 +42,9 @@
                 </div>
                 <div class="col-sm-6 display-cell">
                     <ul class="list-inline pull-right">
-                        <li><a href="https://gin.g-node.org/info/about">About</a></li>
-                        <li><a href="https://gin.g-node.org/info/imprint">Imprint</a></li>
-                        <li><a href="https://gin.g-node.org/info/contact">Contact</a></li>
+                        <li><a href="{{ template "ginui" . }}/info/about">About</a></li>
+                        <li><a href="{{ template "ginui" . }}/info/imprint">Imprint</a></li>
+                        <li><a href="{{ template "ginui" . }}/info/contact">Contact</a></li>
                     </ul>
                 </div>
             </div>
