--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet"
-          href="//projects.g-node.org/assets/gnode-bootstrap-theme/1.1.0-snapshot/css/bootstrap.min.css">
+          href="{{ template "theme" . }}/css/bootstrap.min.css">
     <link rel="shortcut icon" type="image/png"
-          href="//projects.g-node.org/assets/gnode-bootstrap-theme/1.1.0-snapshot/img/favicon.png">
+          href="{{ template "theme" . }}/img/favicon.png">
 
     <title>G-Node GIN</title>
 </head>
@@ -52,7 +52,7 @@
     </nav>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="//projects.g-node.org/assets/gnode-bootstrap-theme/1.1.0-snapshot/js/bootstrap.min.js"></script>
+    <script src="{{ template "theme" . }}/js/bootstrap.min.js"></script>
 </body>
 </html>
 {{ end }}
