--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -70,7 +70,7 @@
             <label for="reg-email-public">
                 <input type="checkbox" id="reg-email-public" name="is_email_public" value="true" {{ if .IsEmailPublic }} checked {{ end }}>
                 Make e-mail public
-                <span class="glyphicon glyphicon-info-sign" data-toggle="tooltip"
+                <span class="glyphicon glyphicon-info-sign glyph-blue" data-toggle="tooltip"
                   title="If you make your e-mail address public, it will be visible for other logged in users.">
                 </span>
             </label>
@@ -122,7 +122,7 @@
             <label for="reg-affiliation-public">
                 <input type="checkbox" id="reg-affiliation-public" name="is_affiliation_public"  value="true" {{ if .IsAffiliationPublic }} checked {{ end }}>
                 Make affiliation public
-                <span class="glyphicon glyphicon-info-sign" data-toggle="tooltip"
+                <span class="glyphicon glyphicon-info-sign glyph-blue" data-toggle="tooltip"
                       title="If you make your affiliation public, it will be visible for other logged in users.">
                 </span>
             </label>
@@ -200,5 +200,11 @@
         $('[data-toggle="tooltip"]').tooltip();
     })
 </script>
+
+<style type="text/css">
+    .glyph-blue {
+        color: rgb(85, 123, 185);
+    }
+</style>
 
 {{ end }}
