[templates/registration] update visibility note

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -78,7 +78,7 @@
                        value="true" {{ if .IsEmailPublic }} checked {{ end }}>
                 Make e-mail public
                 <span class="glyphicon glyphicon-info-sign glyph-blue" data-toggle="tooltip"
-                  title="If you make your e-mail address public, it will be visible for other logged in users.">
+                  title="If you make your e-mail address public, it will be visible to other logged in users.">
                 </span>
             </label>
         </div>
@@ -135,7 +135,7 @@
                        value="true" {{ if .IsAffiliationPublic }} checked {{ end }}>
                 Make affiliation public
                 <span class="glyphicon glyphicon-info-sign glyph-blue" data-toggle="tooltip"
-                      title="If you make your affiliation public, it will be visible for other logged in users.">
+                      title="If you make your affiliation public, it will be visible to other logged in users.">
                 </span>
             </label>
         </div>
