[templates] refactor registration form structure
Reduce required fields, put all remaining required fields to
the top of the registration form as new subset 'account information'.

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -11,139 +11,17 @@
 
 <form action="/oauth/registration" method="post" class="form-horizontal">
 
-    <h4>User information</h4>
-    <hr>
-    <div class="form-group {{ if .FieldErrors.title }}has-error{{ end }}">
-        <label for="reg-title" class="col-sm-3 control-label">Title</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-title" name="title"
-                   placeholder="Title" value="{{ .Title.String }}" maxlength="512">
-            {{ if .FieldErrors.title }}
-                <span class="help-block">{{ .FieldErrors.title }}</span>
-            {{ end }}
-        </div>
-    </div>
-    <div class="form-group {{ if .FieldErrors.first_name }}has-error{{ end }}">
-        <label for="reg-fn" class="col-sm-3 control-label">First name *</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-fn" name="first_name"
-                   placeholder="First Name" value="{{ .FirstName }}" maxlength="512">
-            {{ if .FieldErrors.first_name }}
-                <span class="help-block">{{ .FieldErrors.first_name }}</span>
-            {{ end }}
-        </div>
-    </div>
-    <div class="form-group {{ if .FieldErrors.middle_name }}has-error{{ end }}">
-        <label for="reg-mn" class="col-sm-3 control-label">Middle name</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-mn" name="middle_name"
-                   placeholder="Middle Name" value="{{ .MiddleName.String }}" maxlength="512">
-            {{ if .FieldErrors.middle_name }}
-                <span class="help-block">{{ .FieldErrors.middle_name }}</span>
-            {{ end }}
-        </div>
-    </div>
-    <div class="form-group {{ if .FieldErrors.last_name }}has-error{{ end }}">
-        <label for="reg-ln" class="col-sm-3 control-label">Last name *</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-ln" name="last_name"
-                   placeholder="Last Name" value="{{ .LastName }}" maxlength="512">
-            {{ if .FieldErrors.last_name }}
-                <span class="help-block">{{ .FieldErrors.last_name }}</span>
-            {{ end }}
-        </div>
-    </div>
+    <h4>Account information</h4>
     <div class="form-group {{ if .FieldErrors.login }}has-error{{ end }}">
         <label for="reg-login" class="col-sm-3 control-label">Login *</label>
         <div class="col-sm-9">
             <input type="text" class="form-control" id="reg-login" name="login"
                    placeholder="Login" value="{{ .Login }}" maxlength="512">
             {{ if .FieldErrors.login }}
-                <span class="help-block">{{ .FieldErrors.login }}</span>
+            <span class="help-block">{{ .FieldErrors.login }}</span>
             {{ end }}
         </div>
     </div>
-    <div class="form-group {{ if .FieldErrors.email }}has-error{{ end }}">
-        <label for="reg-email" class="col-sm-3 control-label">e-mail address *</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-email" name="email"
-                   placeholder="e-mail address" value="{{ .Email }}" maxlength="512">
-            <span class="help-block">Note: A valid e-mail address is required to finish the registration process.</span>
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-9 checkbox">
-            <label for="reg-email-public">
-                <input type="checkbox" id="reg-email-public" name="is_email_public"
-                       value="true" {{ if .IsEmailPublic }} checked {{ end }}>
-                Make e-mail public
-                <span class="glyphicon glyphicon-info-sign glyph-blue" data-toggle="tooltip"
-                  title="If you make your e-mail address public, it will be visible to other logged in users.">
-                </span>
-            </label>
-        </div>
-    </div>
-    <input type="hidden" name="request_id" id="reg-request-id" value="{{ .RequestId }}">
-
-    <h4>Affiliation</h4>
-    <hr>
-    <div class="form-group {{ if .FieldErrors.institute }}has-error{{ end }}">
-        <label for="reg-institute" class="col-sm-3 control-label">Institution *</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-institute" name="institute"
-                   placeholder="Institute" value="{{ .Institute }}" maxlength="512">
-            {{ if .FieldErrors.institute }}
-                <span class="help-block">{{ .FieldErrors.institute }}</span>
-            {{ end }}
-        </div>
-    </div>
-
-    <div class="form-group {{ if .FieldErrors.department }}has-error{{ end }}">
-        <label for="reg-department" class="col-sm-3 control-label">Department *</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-department" name="department"
-                   placeholder="Department" value="{{ .Department }}" maxlength="512">
-            {{ if .FieldErrors.department }}
-                <span class="help-block">{{ .FieldErrors.department }}</span>
-            {{ end }}
-        </div>
-    </div>
-    <div class="form-group {{ if .FieldErrors.city }}has-error{{ end }}">
-        <label for="reg-city" class="col-sm-3 control-label">City *</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-city" name="city"
-                   placeholder="City" value="{{ .City }}" maxlength="512">
-            {{ if .FieldErrors.city }}
-                <span class="help-block">{{ .FieldErrors.city }}</span>
-            {{ end }}
-        </div>
-    </div>
-    <div class="form-group {{ if .FieldErrors.country }}has-error{{ end }}">
-        <label for="reg-country" class="col-sm-3 control-label">Country *</label>
-        <div class="col-sm-9">
-            <input type="text" class="form-control" id="reg-country" name="country"
-                   placeholder="Country" value="{{ .Country }}" maxlength="512">
-            {{ if .FieldErrors.country }}
-                <span class="help-block">{{ .FieldErrors.country }}</span>
-            {{ end }}
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-9 checkbox">
-            <label for="reg-affiliation-public">
-                <input type="checkbox" id="reg-affiliation-public" name="is_affiliation_public"
-                       value="true" {{ if .IsAffiliationPublic }} checked {{ end }}>
-                Make affiliation public
-                <span class="glyphicon glyphicon-info-sign glyph-blue" data-toggle="tooltip"
-                      title="If you make your affiliation public, it will be visible to other logged in users.">
-                </span>
-            </label>
-        </div>
-    </div>
-
-
-    <h4>Password</h4>
-    <hr>
     <div class="form-group {{ if .FieldErrors.password }}has-error{{ end }}">
         <label for="reg-password-input" class="col-sm-3 control-label">Password *</label>
         <div class="col-sm-9">
@@ -157,8 +35,32 @@
             <input type="password" class="form-control" id="reg-password-control"
                    name="password_control" placeholder="Password" maxlength="512">
             {{ if .FieldErrors.password }}
-                <span class="help-block">{{ .FieldErrors.password }}</span>
+            <span class="help-block">{{ .FieldErrors.password }}</span>
             {{ end }}
+        </div>
+    </div>
+    <input type="hidden" name="request_id" id="reg-request-id" value="{{ .RequestId }}">
+    <div class="form-group {{ if .FieldErrors.email }}has-error{{ end }}">
+        <label for="reg-email" class="col-sm-3 control-label">e-mail address *</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-email" name="email"
+                   placeholder="e-mail address" value="{{ .Email }}" maxlength="512">
+            {{ if .FieldErrors.email }}
+            <span class="help-block">{{ .FieldErrors.email }}</span>
+            {{ end }}
+            <span class="help-block">Note: A valid e-mail address is required to finish the registration process.</span>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9 checkbox">
+            <label for="reg-email-public">
+                <input type="checkbox" id="reg-email-public" name="is_email_public"
+                       value="true" {{ if .IsEmailPublic }} checked {{ end }}>
+                Make e-mail public
+                <span class="glyphicon glyphicon-info-sign glyph-blue" data-toggle="tooltip"
+                      title="If you make your e-mail address public, it will be visible to other logged in users.">
+                </span>
+            </label>
         </div>
     </div>
 
@@ -179,8 +81,107 @@
             <input class="form-control" name="captcha_resolve" id="reg-captcha-resolve"
                    placeholder="Enter characters">
             {{ if .FieldErrors.captcha }}
-                <span class="help-block">{{ .FieldErrors.captcha }}</span>
+            <span class="help-block">{{ .FieldErrors.captcha }}</span>
             {{ end }}
+        </div>
+    </div>
+
+    <h4>User information</h4>
+    <hr>
+    <div class="form-group {{ if .FieldErrors.title }}has-error{{ end }}">
+        <label for="reg-title" class="col-sm-3 control-label">Title</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-title" name="title"
+                   placeholder="Title" value="{{ .Title.String }}" maxlength="512">
+            {{ if .FieldErrors.title }}
+                <span class="help-block">{{ .FieldErrors.title }}</span>
+            {{ end }}
+        </div>
+    </div>
+    <div class="form-group {{ if .FieldErrors.first_name }}has-error{{ end }}">
+        <label for="reg-fn" class="col-sm-3 control-label">First name</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-fn" name="first_name"
+                   placeholder="First Name" value="{{ .FirstName }}" maxlength="512">
+            {{ if .FieldErrors.first_name }}
+                <span class="help-block">{{ .FieldErrors.first_name }}</span>
+            {{ end }}
+        </div>
+    </div>
+    <div class="form-group {{ if .FieldErrors.middle_name }}has-error{{ end }}">
+        <label for="reg-mn" class="col-sm-3 control-label">Middle name</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-mn" name="middle_name"
+                   placeholder="Middle Name" value="{{ .MiddleName.String }}" maxlength="512">
+            {{ if .FieldErrors.middle_name }}
+                <span class="help-block">{{ .FieldErrors.middle_name }}</span>
+            {{ end }}
+        </div>
+    </div>
+    <div class="form-group {{ if .FieldErrors.last_name }}has-error{{ end }}">
+        <label for="reg-ln" class="col-sm-3 control-label">Last name</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-ln" name="last_name"
+                   placeholder="Last Name" value="{{ .LastName }}" maxlength="512">
+            {{ if .FieldErrors.last_name }}
+                <span class="help-block">{{ .FieldErrors.last_name }}</span>
+            {{ end }}
+        </div>
+    </div>
+
+    <h4>Affiliation</h4>
+    <hr>
+    <div class="form-group {{ if .FieldErrors.institute }}has-error{{ end }}">
+        <label for="reg-institute" class="col-sm-3 control-label">Institution</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-institute" name="institute"
+                   placeholder="Institute" value="{{ .Institute }}" maxlength="512">
+            {{ if .FieldErrors.institute }}
+                <span class="help-block">{{ .FieldErrors.institute }}</span>
+            {{ end }}
+        </div>
+    </div>
+
+    <div class="form-group {{ if .FieldErrors.department }}has-error{{ end }}">
+        <label for="reg-department" class="col-sm-3 control-label">Department</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-department" name="department"
+                   placeholder="Department" value="{{ .Department }}" maxlength="512">
+            {{ if .FieldErrors.department }}
+                <span class="help-block">{{ .FieldErrors.department }}</span>
+            {{ end }}
+        </div>
+    </div>
+    <div class="form-group {{ if .FieldErrors.city }}has-error{{ end }}">
+        <label for="reg-city" class="col-sm-3 control-label">City</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-city" name="city"
+                   placeholder="City" value="{{ .City }}" maxlength="512">
+            {{ if .FieldErrors.city }}
+                <span class="help-block">{{ .FieldErrors.city }}</span>
+            {{ end }}
+        </div>
+    </div>
+    <div class="form-group {{ if .FieldErrors.country }}has-error{{ end }}">
+        <label for="reg-country" class="col-sm-3 control-label">Country</label>
+        <div class="col-sm-9">
+            <input type="text" class="form-control" id="reg-country" name="country"
+                   placeholder="Country" value="{{ .Country }}" maxlength="512">
+            {{ if .FieldErrors.country }}
+                <span class="help-block">{{ .FieldErrors.country }}</span>
+            {{ end }}
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-sm-offset-3 col-sm-9 checkbox">
+            <label for="reg-affiliation-public">
+                <input type="checkbox" id="reg-affiliation-public" name="is_affiliation_public"
+                       value="true" {{ if .IsAffiliationPublic }} checked {{ end }}>
+                Make affiliation public
+                <span class="glyphicon glyphicon-info-sign glyph-blue" data-toggle="tooltip"
+                      title="If you make your affiliation public, it will be visible to other logged in users.">
+                </span>
+            </label>
         </div>
     </div>
 
