[templates] reorganize captcha display

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -66,8 +66,8 @@
 
     <hr>
     <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-9">Please verify that you are a person:</div>
-        <div class="col-sm-offset-3 col-sm-3">
+        <label for="reg-image" class="col-sm-3 control-label">Please verify that you are a person</label>
+        <div class="col-sm-3">
             <img id="reg-image" src="/captcha/{{ .CaptchaId }}.png" alt="Captcha image">
         </div>
         <div class="col-sm-offset-6 col-sm-6">
