[templates] add Terms of Use note

--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -92,9 +92,13 @@
                             {{ end }}
                         </div>
                     </div>
+
                     <hr>
                     <div class="form-group">
                         <div class="col-sm-9 col-sm-offset-3">
+                            <p>By clicking "Create account", you agree to our
+                                <a href="http://www.g-node.org/gin_terms">Terms of Use</a>.
+                            </p>
                             <input type="button" class="btn btn-primary" value="Next" onclick="toggleStepper()">
                             <button type="submit" class="btn btn-default">Create account</button>
                         </div>
@@ -217,13 +221,8 @@
                             <p>By clicking "Create account", you agree to our
                                 <a href="http://www.g-node.org/gin_terms">Terms of Use</a>.
                             </p>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-sm-9 col-sm-offset-3">
                             <input type="button" class="btn btn-primary" value="Back" onclick="toggleStepper()">
-                            <button type="submit" class="btn btn-default">Create account</button>
+                            <button type="submit" class="btn btn-success">Create account</button>
                         </div>
                     </div>
                 </div>
@@ -232,10 +231,7 @@
     </div>
     <br /><br />
 
-    <div class="line">
-        <br><br><br><br><br><br>
-    </div>
-
+    <div class="line"></div>
 </form>
 
 <script type="text/javascript">
