[templates] change layout
- Add "plainbox" class to main container.
- Add an "hr" tag to the success template for better visual separation
of header and body.
- Reformat account activation success message.

--- a/resources/templates/layout.html
+++ b/resources/templates/layout.html
@@ -23,7 +23,7 @@
             </div>
         </nav>
 
-        <div class="container main-container">
+        <div class="container main-container plainbox">
             {{ template "content" . }}
         </div>
     </div>
