--- a/resources/templates/registration.html
+++ b/resources/templates/registration.html
@@ -26,8 +26,8 @@
                         {{ if .FieldErrors.login }}
                         <span class="help-block">{{ .FieldErrors.login }}</span>
                         {{ end }}
-                        <span class="help-block"><strong>Please note:</strong> Username is required to create and
-                            used to display your repositories and <strong>cannot be changed.</strong></span>
+                        <span class="help-block"><strong>Please note:</strong> Username is used to create and
+                            to display your repositories and <strong>cannot be changed.</strong></span>
                     </div>
                 </div>
                 <div class="form-group {{ if .FieldErrors.password }}has-error{{ end }}">
